# ircsq

./: .gitignore  CMakeLists.txt  README.md  config.json.example  ircsq.cc  ircsq.h  main.cc
irc/: bot.cc  bot.h  prefix.h
